@@ -10,11 +10,12 @@ module Gluon
   autoload :Builder, 'gluon/builder'
   autoload :Dispatcher, 'gluon/dispatcher'
   autoload :ERBContext, 'gluon/po'
-  autoload :PresentationObject, 'gluon/po'
   autoload :MemoryStore, 'gluon/rs'
-  autoload :SessionManager, 'gluon/rs'
-  autoload :SessionHandler, 'gluon/rs'
+  autoload :Mock, 'gluon/mock'
+  autoload :PresentationObject, 'gluon/po'
   autoload :RequestResponseContext, 'gluon/rs'
+  autoload :SessionHandler, 'gluon/rs'
+  autoload :SessionManager, 'gluon/rs'
   autoload :Setup, 'gluon/setup'
   autoload :ViewRenderer, 'gluon/renderer'
 end
